Complete Hero Section

--- a/index.html
+++ b/index.html
@@ -49,5 +49,43 @@
         </button>
       </nav>
     </header>
+
+    <section
+      class="bg-[url(./assets/hero-bg.png)] bg-cover h-100 md:h-120 lg:h-140 xl:h-200 bg-center md:bg-top flex text-white flex-col justify-center items-center gap-3"
+    >
+      <div
+        class="bg-[url(./assets/hero-circle.png)] w-48 h-48 md:h-52 md:w-52 lg:h-64 lg:w-64 xl:w-100 xl:h-100 bg-center bg-cover rounded-full flex justify-center items-center p-16 lg:p-20 relative"
+      >
+        <p
+          class="absolute xl:text-2xl py-2 px-4 rounded-full bg-green-300 xl:top-2 xl:right-14 text-black uppercase top-0 right-0 text-base lg:right-8"
+        >
+          New
+        </p>
+        <img class="" src="./assets/microphone.png" alt="microphone img" />
+      </div>
+      <div
+        class="flex flex-col items-center max-w-sm lg:max-w-full text-center gap-2 lg:gap-4"
+      >
+        <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-7xl">
+          TechWave
+        </h2>
+        <p class="">
+          Your daily dose of tech insights, productivity hacks, and personal
+          growth
+        </p>
+        <div class="flex gap-4">
+          <button
+            class="bg-[linear-gradient(47deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] py-3 px-4 rounded-full font-semibold"
+          >
+            <span><i class="fa-brands fa-spotify"></i></span> Listen on Spotify
+          </button>
+          <button
+            class="py-3 px-6 rounded-full border-green-500 border-2 text-green-500 flex gap-4 font-semibold"
+          >
+            <span><i class="fa-regular fa-envelope"></i></span> Subscribe
+          </button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
