--- a/index.html
+++ b/index.html
@@ -87,5 +87,56 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="bg-[rgba(26,11,46,1)] text-white flex justify-center items-center flex-col gap-12 py-20"
+    >
+      <div
+        class="podcast-content-section max-w-4xl items-center text-center px-3"
+      >
+        <h3 class="text-4xl lg:text-5xl xl:text-6xl font-bold mb-3">
+          About the Podcast
+        </h3>
+        <p class="mb-4 leading-8">
+          TechWave is your go-to podcast for staying ahead in the fast-paced
+          world of technology. <br />We break down complex topics into
+          digestible insights, explore productivity strategies that actually
+          work, and share stories of personal growth from industry leaders.
+        </p>
+        <p>
+          Join thousands of young professionals and tech enthusiasts who start
+          their day with TechWave.
+        </p>
+      </div>
+      <hr class="text-gray-800 my-6 lg:my-12 w-11/12 lg:w-9/12" />
+      <div
+        class="podcast-card-section grid grid-cols-2 gap-8 lg:flex lg:justify-between w-full xl:px-60 lg:px-20"
+      >
+        <div class="card text-center">
+          <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+            150K+
+          </p>
+          <p>Monthly Listeners</p>
+        </div>
+        <div class="card text-center">
+          <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+            200+
+          </p>
+          <p>Episodes Published</p>
+        </div>
+        <div class="card text-center">
+          <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+            4.9★
+          </p>
+          <p>Average Rating</p>
+        </div>
+        <div class="card text-center">
+          <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+            50+
+          </p>
+          <p>Industry Experts</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
