--- a/index.html
+++ b/index.html
@@ -138,5 +138,78 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="bg-[rgba(35,14,61,1)] py-10 lg:py-20 xl:py-32 text-white text-center lg:px-20 xl:px-60 px-6"
+    >
+      <h3 class="font-bold text-3xl md:text-4xl lg:text-5xl mb-10 lg:mb-12">
+        Why Choose TechWave
+      </h3>
+      <div
+        class="container lg:grid lg:grid-cols-5 lg:grid-rows-3 lg:gap-4 flex flex-col gap-8"
+      >
+        <article
+          class="xl:px-8 flex flex-col items-start row-span-2 col-span-2 bg-[#351165] rounded-4xl px-4 py-6 gap-4 lg:justify-center"
+        >
+          <img src="./assets/headphone.png" alt="headphone" />
+
+          <h6 class="font-semibold text-2xl">Premium Audio Quality</h6>
+          <p class="text-left">
+            Experience crystal-clear sound with professional-grade recording
+            equipment and expert audio engineering. Every episode is mastered
+            for optimal listening across all devices and platforms.
+          </p>
+        </article>
+
+        <article
+          class="flex flex-col items-start col-span-3 bg-[#351165] rounded-4xl px-4 xl:px-8 py-6 gap-4 lg:justify-center"
+        >
+          <img src="./assets/device.png" alt="headphone" />
+
+          <h6 class="font-semibold text-2xl">Mobile Friendly</h6>
+          <p class="text-left">
+            Listen on the go with seamless mobile experience and offline
+            downloads.
+          </p>
+        </article>
+
+        <article
+          class="xl:px-8 flex flex-col items-start col-span-3 bg-[#351165] rounded-4xl px-4 py-6 gap-4 lg:justify-center"
+        >
+          <img src="./assets/location.png" alt="location" />
+
+          <h6 class="font-semibold text-2xl">Global Community</h6>
+          <p class="text-left">
+            Connect with tech enthusiasts from over 120 countries worldwide.
+          </p>
+        </article>
+
+        <article
+          class="xl:px-8 flex flex-col items-start col-span-3 bg-[#351165] rounded-4xl px-4 py-6 gap-4 lg:justify-center"
+        >
+          <img width="55px" src="./assets/image.png" alt="image" />
+
+          <h6 class="font-semibold text-2xl">Exclusive Interviews</h6>
+          <p class="text-left">
+            Get unprecedented access to industry titans, startup founders, and
+            tech visionaries. Our host secures exclusive conversations you won't
+            find anywhere else, diving deep into their journeys, failures, and
+            success strategies.
+          </p>
+        </article>
+
+        <article
+          class="xl:px-8 flex flex-col items-start col-span-2 bg-[#351165] rounded-4xl px-4 py-6 gap-4 lg:justify-center"
+        >
+          <img src="./assets/resource.png" alt="resource" />
+
+          <h6 class="font-semibold text-2xl">Rich Resources</h6>
+          <p class="text-left">
+            Access show notes, transcripts, and additional learning materials
+            for every episode.
+          </p>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
