--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h3 class="text-4xl lg:text-5xl xl:text-6xl font-bold mb-3">
           About the Podcast
         </h3>
-        <p class="mb-4 leading-8">
+        <p class="mb-8 mt-6 leading-8">
           TechWave is your go-to podcast for staying ahead in the fast-paced
           world of technology. <br />We break down complex topics into
           digestible insights, explore productivity strategies that actually
@@ -142,11 +142,11 @@
     <section
       class="bg-[rgba(35,14,61,1)] py-10 lg:py-20 xl:py-32 text-white text-center lg:px-20 xl:px-60 px-6"
     >
-      <h3 class="font-bold text-3xl md:text-4xl lg:text-5xl mb-10 lg:mb-12">
+      <h3 class="font-bold text-2xl md:text-4xl lg:text-5xl mb-10 lg:mb-12">
         Why Choose TechWave
       </h3>
       <div
-        class="container lg:grid lg:grid-cols-5 lg:grid-rows-3 lg:gap-4 flex flex-col gap-8"
+        class="container lg:grid lg:grid-cols-5 lg:grid-rows-3 lg:gap-4 flex flex-col gap-8 md:px-10 lg:px-0"
       >
         <article
           class="xl:px-8 flex flex-col items-start row-span-2 col-span-2 bg-[#351165] rounded-4xl px-4 py-6 gap-4 lg:justify-center"
@@ -209,6 +209,130 @@
             for every episode.
           </p>
         </article>
+      </div>
+    </section>
+
+    <section
+      class="bg-[#1A0B2E] py-10 md:py-16 lg:py-20 xl:py-32 text-white lg:px-20 xl:px-60 px-6"
+    >
+      <h4 class="font-bold text-center mb-12 text-3xl lg:text-4xl xl:text-5xl">
+        Featured Episodes
+      </h4>
+
+      <div
+        class="container flex flex-col lg:flex-row gap-4 md:gap-8 lg:gap-4 md:px-10 lg:px-0"
+      >
+        <div
+          class="episode_card bg-[#250D44] rounded-2xl flex flex-col md:gap-4 lg:gap-0"
+        >
+          <div class="w-full h-[300px] lg:h-[250px] xl:h-[300px]">
+            <iframe
+              width="100%"
+              height="100%"
+              class="rounded-t-2xl"
+              src="https://www.youtube.com/embed/KKNCiRWd_j0?si=mv28pSL-aH3xbql5"
+              title="YouTube video player"
+              frameborder="1"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="p-2 lg:p-4 flex flex-col gap-2 lg:gap-3 flex-1">
+            <h4 class="font-bold text-xl lg:text-2xl flex-1">
+              The Future of AI in Everyday Life
+            </h4>
+            <p class="flex-1">
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next decade.
+            </p>
+            <p class="text-green-400">
+              <span><i class="fa-solid fa-clock"></i></span> 42 min
+            </p>
+          </div>
+        </div>
+        <div
+          class="episode_card bg-[#250D44] rounded-2xl flex-col flex md:gap-4 lg:gap-0"
+        >
+          <div class="w-full h-[300px]">
+            <iframe
+              width="100%"
+              height="100%"
+              class="rounded-t-2xl"
+              src="https://www.youtube.com/embed/PLBYYdg0sfs?si=cxl5yFDvmXQE0hkW"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="p-2 lg:p-4 flex flex-col gap-2 lg:gap-3 flex-1">
+            <h4 class="font-bold text-xl lg:text-2xl">
+              Building Better Habits for Remote Work
+            </h4>
+            <p>
+              Practical strategies for staying productive and maintaining
+              work-life balance in a remote environment.
+            </p>
+            <p class="text-green-400">
+              <span><i class="fa-solid fa-clock"></i></span> 35 min
+            </p>
+          </div>
+        </div>
+        <div
+          class="episode_card bg-[#250D44] rounded-2xl flex flex-col md:gap-4 lg:gap-0"
+        >
+          <div class="w-full h-[300px]">
+            <iframe
+              width="100%"
+              height="100%"
+              class="rounded-t-2xl"
+              src="https://www.youtube.com/embed/fZmQ_aPXJAM?si=B08L04VdJRadaxED"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="p-2 lg:p-4 flex flex-col gap-2 lg:gap-3 flex-1">
+            <h4 class="font-bold text-xl lg:text-2xl flex-1">
+              Career Growth in Tech: A Roadmap
+            </h4>
+            <p class="flex-1">
+              Expert advice on navigating your tech career from junior developer
+              to senior leadership roles.
+            </p>
+            <p class="text-green-400">
+              <span><i class="fa-solid fa-clock"></i></span> 51 min
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
