--- a/index.html
+++ b/index.html
@@ -335,5 +335,71 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="bg-[#1A0B2E] text-white lg:px-20 xl:px-60 px-6 md:pb-16 lg:pb-20 xl:pb-32 pb-10"
+    >
+      <h4 class="font-bold text-center mb-12 text-3xl lg:text-4xl xl:text-5xl">
+        Meet the Host
+      </h4>
+      <div
+        class="flex bg-[#351165] flex-col lg:flex-row p-6 lg:p-10 justify-center items-center rounded-3xl gap-4 lg:gap-8"
+      >
+        <div class="w-40 h-40 lg:h-full lg:w-9/12 xl:w-5/12">
+          <img
+            width="100%"
+            height="100%"
+            class="rounded-full"
+            src="./assets/host.png"
+            alt="Alex Kumar"
+          />
+        </div>
+        <div
+          class="flex flex-col justify-center items-center lg:items-start gap-5"
+        >
+          <h6 class="font-bold text-2xl lg:text-4xl">Chan Badsha Bhuiyan</h6>
+
+          <p class="leading-6 text-center lg:text-left">
+            Tech entrepreneur, productivity expert, and lifelong learner. Badsha
+            has been in the tech industry for over 10 years, working with
+            startups and Fortune 500 companies. Through TechWave, Alex shares
+            insights from industry leaders and practical advice for anyone
+            looking to grow in tech.
+          </p>
+          <ul class="flex justify-center items-center gap-2">
+            <li
+              class="border p-2 rounded-full flex justify-center items-center"
+            >
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/chan-badsha2004/"
+                ><img src="./assets/linkedin.png" alt="linkedin"
+              /></a>
+            </li>
+            <li
+              class="border p-2 rounded-full flex justify-center items-center"
+            >
+              <a target="_blank" href="https://x.com/home"
+                ><img src="./assets/x.png" alt="twitter"
+              /></a>
+            </li>
+            <li
+              class="border p-2 rounded-full flex justify-center items-center"
+            >
+              <a target="_blank" href="https://www.instagram.com/#reactivated"
+                ><img src="./assets/instagram.png" alt="instagram"
+              /></a>
+            </li>
+            <li
+              class="border p-2 rounded-full flex justify-center items-center"
+            >
+              <a target="_blank" href="https://www.youtube.com/"
+                ><img src="./assets/youtube.png" alt="youtube"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
