--- a/index.html
+++ b/index.html
@@ -35,12 +35,31 @@
         <ul
           class="hidden lg:flex gap-8 justify-center items-center font-medium"
         >
-          <li><a href="#about">About</a></li>
-          <li><a href="#episode">Episode</a></li>
-          <li><a href="#host">Host</a></li>
+          <li>
+            <a
+              class="transition-colors duration-300 hover:text-pink-500"
+              href="#about"
+              >About</a
+            >
+          </li>
+          <li>
+            <a
+              class="transition-colors duration-300 hover:text-pink-500"
+              href="#episode"
+              >Episode</a
+            >
+          </li>
+          <li>
+            <a
+              class="transition-colors duration-300 hover:text-pink-500"
+              href="#host"
+            >
+              Host
+            </a>
+          </li>
         </ul>
         <button
-          class="hidden lg:flex justify-center items-center gap-1 text-base cursor-pointer font-semibold rounded-full px-4 py-3 bg-[linear-gradient(47deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))]"
+          class="hidden hover:bg-white lg:flex justify-center items-center gap-1 text-base cursor-pointer font-semibold rounded-full px-4 py-3 bg-[linear-gradient(47deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))]"
         >
           Subscribe <span> <i class="fa-solid fa-arrow-right"></i></span>
         </button>
@@ -68,6 +87,7 @@
         >
           <h2
             class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-7xl"
+            
           >
             TechWave
           </h2>
@@ -76,14 +96,22 @@
             growth
           </p>
           <div class="flex gap-4">
+       <button
+  class="bg-[linear-gradient(47deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))]
+         py-3 px-4 rounded-full font-semibold
+         transition-all duration-500
+         hover:shadow-[0_0_30px_rgba(251,9,180,0.6)]
+         hover:scale-105 group"
+>
+  <span class="inline-block transition-transform duration-300 group-hover:translate-x-1">
+    <i class="fa-brands fa-spotify"></i>
+  </span>
+  Listen On Spotify
             <button
-              class="bg-[linear-gradient(47deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] py-3 px-4 rounded-full font-semibold"
-            >
-              <span><i class="fa-brands fa-spotify"></i></span> Listen on
-              Spotify
-            </button>
-            <button
-              class="py-3 px-6 rounded-full border-green-500 border-2 text-green-500 flex gap-4 font-semibold"
+                class="py-3 px-6 rounded-full border-green-500 border-2 text-green-500
+         flex gap-4 font-semibold
+         transition-all duration-300
+         hover:bg-green-500 hover:text-black hover:scale-105"
             >
               <span><i class="fa-regular fa-envelope"></i></span> Subscribe
             </button>
@@ -112,29 +140,75 @@
           </p>
         </div>
         <hr class="text-gray-800 my-6 lg:my-12 w-11/12 lg:w-9/12" />
-        <div
-          class="podcast-card-section grid grid-cols-2 gap-8 lg:flex lg:justify-between w-full xl:px-60 lg:px-20"
-        >
-          <div class="card text-center">
-            <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+    <div
+  class="podcast-card-section grid grid-cols-2 gap-8
+         lg:flex lg:justify-between
+         w-full xl:px-60 lg:px-20
+         animate-[fadeUp_0.8s_ease-out_forwards]"
+>
+
+       <div
+  class="card text-center
+         transition-all duration-500
+         hover:-translate-y-2 hover:scale-105"
+>
+<p
+  class="font-extrabold text-green-400
+         text-4xl lg:text-5xl mb-3
+         transition-all duration-300
+         group-hover:text-green-300"
+>
+
               150K+
             </p>
             <p>Monthly Listeners</p>
           </div>
-          <div class="card text-center">
-            <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+   <div
+  class="card text-center
+         transition-all duration-500
+         hover:-translate-y-2 hover:scale-105"
+>
+
+<p
+  class="font-extrabold text-green-400
+         text-4xl lg:text-5xl mb-3
+         transition-all duration-300
+         group-hover:text-green-300"
+>
+
               200+
             </p>
             <p>Episodes Published</p>
           </div>
-          <div class="card text-center">
-            <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+  <div
+  class="card text-center
+         transition-all duration-500
+         hover:-translate-y-2 hover:scale-105"
+>
+<p
+  class="font-extrabold text-green-400
+         text-4xl lg:text-5xl mb-3
+         transition-all duration-300
+         group-hover:text-green-300"
+>
+
               4.9★
             </p>
             <p>Average Rating</p>
           </div>
-          <div class="card text-center">
-            <p class="font-extrabold text-green-400 text-4xl lg:text-5xl mb-3">
+<div
+  class="card text-center
+         transition-all duration-500
+         hover:-translate-y-2 hover:scale-105"
+>
+
+<p
+  class="font-extrabold text-green-400
+         text-4xl lg:text-5xl mb-3
+         transition-all duration-300
+         group-hover:text-green-300"
+>
+
               50+
             </p>
             <p>Industry Experts</p>
@@ -230,7 +304,7 @@
           <div
             class="episode_card bg-[#250D44] rounded-2xl flex flex-col md:gap-4 lg:gap-0"
           >
-            <div class="w-full h-[300px] lg:h-[250px] xl:h-[300px]">
+            <div class="w-full h-[300px] xl:h-[300px]">
               <iframe
                 width="100%"
                 height="100%"
