--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
          py-3 px-4 rounded-full font-semibold
          transition-all duration-500
          hover:shadow-[0_0_30px_rgba(251,9,180,0.6)]
-         hover:scale-105 group"
+         hover:scale-105 group text-xs md:text-base"
 >
   <span class="inline-block transition-transform duration-300 group-hover:translate-x-1">
     <i class="fa-brands fa-spotify"></i>
@@ -111,7 +111,7 @@
                 class="py-3 px-6 rounded-full border-green-500 border-2 text-green-500
          flex gap-4 font-semibold
          transition-all duration-300
-         hover:bg-green-500 hover:text-black hover:scale-105"
+         hover:bg-green-500 hover:text-black hover:scale-105 text-xs md:text-base"
             >
               <span><i class="fa-regular fa-envelope"></i></span> Subscribe
             </button>
@@ -230,7 +230,7 @@
           >
             <img src="./assets/headphone.png" alt="headphone" />
 
-            <h6 class="font-semibold text-2xl">Premium Audio Quality</h6>
+            <h6 class="font-semibold text-xl md:text-2xl">Premium Audio Quality</h6>
             <p class="text-left">
               Experience crystal-clear sound with professional-grade recording
               equipment and expert audio engineering. Every episode is mastered
@@ -243,7 +243,7 @@
           >
             <img src="./assets/device.png" alt="headphone" />
 
-            <h6 class="font-semibold text-2xl">Mobile Friendly</h6>
+            <h6 class="font-semibold text-xl md:text-2xl">Mobile Friendly</h6>
             <p class="text-left">
               Listen on the go with seamless mobile experience and offline
               downloads.
@@ -255,7 +255,7 @@
           >
             <img src="./assets/location.png" alt="location" />
 
-            <h6 class="font-semibold text-2xl">Global Community</h6>
+            <h6 class="font-semibold text-xl md:text-2xl">Global Community</h6>
             <p class="text-left">
               Connect with tech enthusiasts from over 120 countries worldwide.
             </p>
@@ -266,7 +266,7 @@
           >
             <img width="55px" src="./assets/image.png" alt="image" />
 
-            <h6 class="font-semibold text-2xl">Exclusive Interviews</h6>
+            <h6 class="font-semibold text-xl md:text-2xl">Exclusive Interviews</h6>
             <p class="text-left">
               Get unprecedented access to industry titans, startup founders, and
               tech visionaries. Our host secures exclusive conversations you
@@ -416,7 +416,7 @@
       </section>
 
       <section
-        class="bg-[#1A0B2E] text-white lg:px-20 xl:px-60 px-6 md:pb-16 lg:pb-20 xl:pb-32 pb-10"
+        class="bg-[#1A0B2E] text-white lg:px-20 xl:px-60 px-4 md:px-6 md:pb-16 lg:pb-20 xl:pb-32 pb-10"
       >
         <h4
           class="font-bold text-center mb-12 text-3xl lg:text-4xl xl:text-5xl"
@@ -424,7 +424,7 @@
           Meet the Host
         </h4>
         <div
-          class="flex bg-[#351165] flex-col lg:flex-row p-6 lg:p-10 justify-center items-center rounded-3xl gap-4 lg:gap-8"
+          class="flex bg-[#351165] flex-col lg:flex-row md:p-6 px-3 py-8 lg:p-10 justify-center items-center rounded-3xl gap-4 lg:gap-8"
         >
           <div class="w-40 h-40 lg:h-full lg:w-9/12 xl:w-5/12">
             <img
@@ -438,9 +438,9 @@
           <div
             class="flex flex-col justify-center items-center lg:items-start gap-5"
           >
-            <h6 class="font-bold text-2xl lg:text-4xl">Chan Badsha Bhuiyan</h6>
+            <h6 class="font-bold text-xl md:text-2xl lg:text-4xl">Chan Badsha Bhuiyan</h6>
 
-            <p class="leading-6 text-center lg:text-left">
+            <p class="leading-6 text-center  lg:text-left">
               Tech entrepreneur, productivity expert, and lifelong learner.
               Badsha has been in the tech industry for over 10 years, working
               with startups and Fortune 500 companies. Through TechWave, Alex
